--- a/package.json
+++ b/package.json
@@ -28,6 +28,15 @@
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.0",
-    "babel-loader": "^9.1.2"
+    "babel-loader": "^9.1.2",
+    "jest-environment-jsdom": "^30.2.0"
+  },
+  "peerDependencies": {},
+  "optionalDependencies": {},
+  "engines": {
+    "node": ">=14"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
