--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "webpack-dev-server": "^4.15.0",
     "babel-loader": "^9.1.2",
     "jest-environment-jsdom": "^30.2.0"
+    ,"@playwright/test": "^1.37.0",
+    "playwright": "^1.37.0"
   },
   "peerDependencies": {},
   "optionalDependencies": {},
