--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   test:
@@ -23,6 +23,11 @@ jobs:
         with:
           files: coverage/lcov.info
           fail_ci_if_error: false
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage
+          path: coverage
 
   e2e:
     runs-on: ubuntu-latest
@@ -42,6 +47,48 @@ jobs:
         run: npx playwright install --with-deps
       - name: Run E2E tests
         run: npx playwright test --reporter=list
+
+  assemble-site:
+    runs-on: ubuntu-latest
+    needs: [test, e2e]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+      - name: Install deps
+        run: npm ci
+      - name: Build app
+        run: npm run build
+      - name: Generate docs
+        run: npm run jsdoc
+      - name: Assemble site directory
+        run: |
+          rm -rf site || true
+          mkdir -p site/docs
+          cp -R dist/* site/ || true
+          cp -R docs/* site/docs/ || true
+      - name: Upload site artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: site
+          path: site
+
+  publish-site:
+    runs-on: ubuntu-latest
+    needs: assemble-site
+    steps:
+      - uses: actions/checkout@v4
+      - name: Download site artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: site
+          path: site
+      - name: Publish site to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./site
 
   publish-docs:
     runs-on: ubuntu-latest
