--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "module.js",
   "scripts": {
     "test": "jest --coverage",
-    "e2e": "playwright test",
-    "e2e:open": "playwright test --headed",
+    "e2e": "cypress run",
+    "e2e:open": "cypress open",
     "jsdoc": "jsdoc -c ./jsdoc.config.json -r -d ./docs",
     "start": "webpack serve --mode development --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "serve:public": "npx http-server ./public -p 3000"
   },
   "keywords": [],
   "author": "",
@@ -31,9 +32,8 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.0",
     "babel-loader": "^9.1.2",
-    "jest-environment-jsdom": "^30.2.0"
-    ,"@playwright/test": "^1.37.0",
-    "playwright": "^1.37.0"
+    "jest-environment-jsdom": "^30.2.0",
+    "cypress": "^12.17.0"
   },
   "peerDependencies": {},
   "optionalDependencies": {},
