--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "jsdoc": "jsdoc -c ./jsdoc.config.json -r -d ./docs",
     "start": "webpack serve --mode development --open",
     "build": "webpack --mode production",
-    "serve:public": "npx http-server . -p 3001"
+    "serve:public": "npx http-server public -p 3001 -c-1 -o"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -23,26 +24,27 @@
   "devDependencies": {
     "@babel/preset-env": "^7.29.0",
     "@babel/preset-react": "^7.18.6",
-    "babel-jest": "^30.2.0",
-    "jest": "^30.2.0",
-    "jsdoc": "^4.0.5",
-    "@testing-library/react": "^14.0.0",
     "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "babel-jest": "^30.2.0",
+    "babel-loader": "^9.1.2",
+    "cypress": "^12.17.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "jsdoc": "^4.0.5",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.0",
-    "babel-loader": "^9.1.2",
-    "jest-environment-jsdom": "^30.2.0",
-    "cypress": "^12.17.0"
+    "webpack-dev-server": "^4.15.0"
   },
-  "peerDependencies": {},
-  "optionalDependencies": {},
   "engines": {
     "node": ">=14"
   },
   "jest": {
     "testEnvironment": "jsdom",
-    "testPathIgnorePatterns": ["<rootDir>/tests/e2e/", "<rootDir>/cypress/"]
+    "testPathIgnorePatterns": [
+      "<rootDir>/tests/e2e/",
+      "<rootDir>/cypress/"
+    ]
   }
 }
